--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "escpos": "^3.0.0-alpha.6",
