--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "helmet": "^8.0.0",
     "jimp": "^0.22.12",
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
