--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.2",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "qr-image": "^3.2.0",
     "react-router-dom": "^5.3.4",
+    "sequelize": "^6.37.5",
     "stream-to-buffer": "^0.1.0"
   },
   "name": "fangs-food-pos",
