--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.0",
     "helmet": "^8.0.0",
     "jimp": "^0.22.12",
+    "joi": "^17.13.3",
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
